--- a/ValeraGame/Base.lproj/LaunchScreen.storyboard
+++ b/ValeraGame/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Валера Жизнь Тяжёлая Сука.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="4fL-FE-DhA">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Валера Жизнь Тяжёлая Сука.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="4fL-FE-DhA">
                                 <rect key="frame" x="44" y="0.0" width="808" height="414"/>
                                 <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
                             </imageView>
