--- a/ValeraGame/Veiw/Base.lproj/LaunchScreen.storyboard
+++ b/ValeraGame/Veiw/Base.lproj/LaunchScreen.storyboard
@@ -16,18 +16,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Валера Жизнь Тяжёлая Сука.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="4fL-FE-DhA">
-                                <rect key="frame" x="44" y="0.0" width="808" height="414"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Валера Жизнь Тяжёлая Сука.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="4fL-FE-DhA">
+                                <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                                 <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="labelColor"/>
                         <constraints>
-                            <constraint firstItem="4fL-FE-DhA" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="9cn-mP-1Xr"/>
-                            <constraint firstItem="4fL-FE-DhA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="AdB-eH-d2B"/>
-                            <constraint firstItem="4fL-FE-DhA" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="BIb-1r-AsH"/>
-                            <constraint firstAttribute="bottom" secondItem="4fL-FE-DhA" secondAttribute="bottom" id="SXj-wS-l7N"/>
+                            <constraint firstItem="4fL-FE-DhA" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="EGO-iG-CDD"/>
+                            <constraint firstAttribute="bottom" secondItem="4fL-FE-DhA" secondAttribute="bottom" id="QtJ-6p-h52"/>
+                            <constraint firstItem="4fL-FE-DhA" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="ebc-KW-1rB"/>
+                            <constraint firstAttribute="trailing" secondItem="4fL-FE-DhA" secondAttribute="trailing" id="qP4-Kg-w1U"/>
                         </constraints>
                     </view>
                 </viewController>
